tests/repositories/snapshots/cargo_ci/docker/Dockerfile-amd64.snap
---
source: tests/common/mod.rs
expression: content
---
FROM amd64/alpine
ADD cargo_ci /
ENTRYPOINT ["/cargo_ci"]
