tests/repositories/snapshots/cargo_ci/docker/Dockerfile-arm64.snap
---
source: tests/common/mod.rs
expression: content
---
FROM arm64v8/alpine
ADD cargo_ci /
ENTRYPOINT ["/cargo_ci"]
